// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axios should DELETE 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {},
      "method": "delete",
      "params": undefined,
      "url": "http://localhost/delete/path",
    },
  ],
]
`;

exports[`Axios should GET 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {},
      "method": "get",
      "params": undefined,
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should PATCH 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {},
      "method": "patch",
      "params": undefined,
      "url": "http://localhost/patch/path",
    },
  ],
]
`;

exports[`Axios should POST 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {},
      "method": "post",
      "params": undefined,
      "url": "http://localhost/post/path",
    },
  ],
]
`;

exports[`Axios should PUT 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {},
      "method": "put",
      "params": undefined,
      "url": "http://localhost/put/path",
    },
  ],
]
`;

exports[`Axios should not use base url 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {},
      "method": "get",
      "params": undefined,
      "url": "http://without-base-url/path",
    },
  ],
]
`;

exports[`Axios should not use base url when specified 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {},
      "method": "get",
      "params": undefined,
      "url": "http://without-base-url/path",
    },
  ],
]
`;

exports[`Axios should use basic auth when specified 1`] = `
Array [
  Array [
    Object {
      "auth": Object {
        "password": "pass",
        "username": "user",
      },
      "data": undefined,
      "headers": Object {},
      "method": "get",
      "params": undefined,
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use bearer auth when specified 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Authorization": "Bearer jwt.jwt.jwt",
      },
      "method": "get",
      "params": undefined,
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use data as specified 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "data_1": "value",
      },
      "headers": Object {},
      "method": "get",
      "params": undefined,
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use headers as specified 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "X-Header": "Value",
      },
      "method": "get",
      "params": undefined,
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use params as specified 1`] = `
Array [
  Array [
    Object {
      "data": undefined,
      "headers": Object {},
      "method": "get",
      "params": Object {
        "param1": "value",
      },
      "url": "http://localhost/get/path",
    },
  ],
]
`;
